tests/ui/suggestions/argument-list-from-path-sep-error-129273.stderr
error: path separator must be a double colon
  --> $DIR/argument-list-from-path-sep-error-129273.rs:8:30
   |
LL |     fn fmt(&self, f: &mut fmt:Formatter) -> fmt::Result {
   |                              ^
   |
   = note: if you meant to annotate an expression with a type, the type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>
help: use a double colon instead
   |
LL |     fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   |                               +

error: aborting due to 1 previous error

